# Telemetry-gateway

./: .gitignore  CMakeLists.txt  README.md  THREAT_MODEL.md
.claude/: claude.md
demos/: gateway_server.cpp  traffic_generator.cpp
docs/: thread-model.md
include/gateway/: bounded_queue.hpp  config.hpp  forwarder.hpp  parse_envelope.hpp  parse_log.hpp  parse_metrics.hpp  recv_loop.hpp  sink.hpp  source_limiter.hpp  validate_config.hpp  validate_log.hpp  validate_metrics.hpp
src/: forwarder.cpp  parse_envelope.cpp  parse_log.cpp  parse_metrics.cpp  placeholder.cpp  recv_loop.cpp  source_limiter.cpp  validate_config.cpp  validate_log.cpp  validate_metrics.cpp
tests/: placeholder_test.cpp  test_bounded_queue.cpp  test_forwarder.cpp  test_parse_envelope.cpp  test_parse_log.cpp  test_parse_metrics.cpp  test_recv_loop.cpp  test_source_limiter.cpp  test_validate_log.cpp  test_validate_metrics.cpp
